# Raspberry-Vision

./: README.md  Raspberry_init.bash
Vision_example/: Makefile  README.md
Vision_example/cscore/: CMakeLists.txt  Makefile  README.md  acquire_and_stream_video  acquire_and_stream_video.cpp  acquire_and_stream_video.d
Vision_example/full_processing/: CMakeLists.txt  Makefile  README.md  full_processing.cpp  full_processing.sh  main.cpp
Vision_example/full_processing/pipeline/: Contour.cpp  Contour.h  GripPipeline.cpp
Vision_example/full_processing/src/: Contour.cpp  main.cpp
Vision_example/full_processing2/: Makefile  full_processing.cpp  full_processing.sh  main.cpp
Vision_example/hsl_threshold/: CMakeLists.txt  Makefile  README.md  hsl_threshold.cpp  hsl_threshold.sh  main.cpp
Vision_example/ntcore/: CMakeLists.txt  Makefile  README.md  main.cpp  nt_client  nt_client.d  nt_client.sh
Vision_example/ntcore/Robot/: Robot.cpp  Robot.h
Vision_example/video_to_disk/: CMakeLists.txt  Makefile  README.md  main.cpp  video_to_disk.cpp
